# byota

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: package.yaml  tests.yaml
api/: index.html
customization/: index.html
docs/: customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
future-features-contributions/: index.html
getting-started/: index.html
scripts/: README.md  build_llamafile.sh  gen_dataset.py
search/: search_index.json
src/: demo.py  notebook.py
src/byota/: config.py  embeddings.py  layout.py  mastodon.py  notebook.py  search.py
src/byota/byota/: embeddings.py  mastodon.py  search.py
src/data/: dump_dataframes_demo.pkl  dump_user_statuses_demo.pkl
step-by-step-guide/: index.html
tests/unit/: conftest.py  test_mastodon.py  test_search.py
tests/unit/data/: mastodon_data.json
