[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "BYOTA"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "platformdirs>=2.1",
  "marimo==0.11.13",
  "Mastodon.py==1.8.1",
  "altair==5.5.0",
  "beautifulsoup4==4.12.3",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "matplotlib"
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/byota/"
Issues = "https://github.com/mozilla-ai/byota/issues"
Source = "https://github.com/mozilla-ai/byota"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
