[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "BYOTA"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "altair==5.5.0",
  "beautifulsoup4==4.13.4",
  "loguru==0.7.3",
  "marimo==0.23.9",
  "Mastodon.py==2.0.1",
  "pandas==2.2.3",
  "platformdirs==4.3.8",
  "scikit-learn==1.6.1",
  "pydantic==2.11.5",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
]

dev = [
  "ruff==0.11.11",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/byota/"
Issues = "https://github.com/mozilla-ai/byota/issues"
Source = "https://github.com/mozilla-ai/byota"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
